Added live chat

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,18 @@ Software.
     rel="stylesheet" />
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/6849932bb344c01909257e8f/1itfmdpc1';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+
 </head>
 
 <body>
